--- a/Lambda Projects/User Interface/User-Interface-master/User-Interface-master/great-idea-website/css/index.css
+++ b/Lambda Projects/User Interface/User-Interface-master/User-Interface-master/great-idea-website/css/index.css
@@ -68,50 +68,50 @@ h1, h2, h3, h4, h5 {
 	width: 880px;
 	height: 1024;
 	margin: 0 auto;
-	display: flex;
+	display: inline-block;
 }
 .top-nav {
-	border: 1px solid red;
 	display: inline-block;
-	text-decoration: none;
-	margin: 35px;
 	vertical-align: top;
 }
 .top-nav a {
+	text-decoration: none;
 	padding: 0 10px 0 10px;
-	border: 1px solid rgb(255, 0, 0);
-	margin: 0 5px 0 5px;
+	margin: 28px 5px 0 5px;
 	color: grey;
 	display: inline-block;
-	font-size: 14px;	
+	font-size: 14px;
+	text-align: right;
+	vertical-align: center;	
 }
 .logo {
 	border: 1px solid red;
-	display: inline-block;
-	margin-top: 25px;
+	display: inline;
+	margin: 15px;
+	vertical-align: top;
 }
 .left{
 	display: inline-block;
-	margin: 120px o o o;
+	margin: 100px 0 0 0;
 	padding: 0 75px;
 	vertical-align: top;
 }
-.left button{
+.message .left button {
 background: white;
 vertical-align: top;
 margin-top: 6px;
+margin-left: 30px;
 padding: 8px 44px;
 font-size: 17px;
-border: 1px solid black;
 cursor: pointer;
 }
-#main-message {
-	font-family: 'Titillium Web', sans=serif;
+
+.message .left #main-message {
+	font-family: "Bangers";
 	vertical-align: center;
 	display: inline-block;
 	font-size: 60px;
 	font-weight: bold;
-	border: 1px solid red;
 	text-align: center;
 }
 
@@ -120,3 +120,49 @@ cursor: pointer;
 	margin-top: 70px;
 	vertical-align: top;
 }
+
+.top-section .features {
+	width: 45%;
+	display: inline-block;
+	margin: 2%;
+	border-top: 2px solid grey;
+
+}
+
+.top-section .about {
+	display: inline-block;
+	width: 45%;
+	margin: 1.3%;
+	border-top: 2px solid grey;
+}
+
+.bottom-section .services {
+	display: inline-block;
+	width: 30%;
+	margin: 1.3%;
+}
+
+.bottom-section .product {
+	display: inline-block;
+	width: 30%;
+	margin: 1.3%;
+}
+
+.bottom-section .vision {
+	display: inline-block;
+	width: 30%;
+	margin: .3%;
+}
+
+.main-footer {
+	display: inline-block;
+	margin: 10px;
+}
+
+.main-footer p {
+	display: inline-block;
+	text-align: center;
+	margin: 0 0 0 400px;
+	font-size: 12px;
+}
+
