added particles to ponderances

--- a/Lambda Projects/Portfolio-II/assets/css/main.css
+++ b/Lambda Projects/Portfolio-II/assets/css/main.css
@@ -3921,6 +3921,11 @@ input, select, textarea {
 		margin:  30px;
 		padding: 20px;
 	}
+
+	#particles-js {
+		background: black;
+		color: red;
+	}
 	
 	
 
