--- a/Lambda Projects/BuildWeek Safeplace/css/index.css
+++ b/Lambda Projects/BuildWeek Safeplace/css/index.css
@@ -134,13 +134,6 @@ table {
   font-size: 20px;
   color: "#7A93C0";
 }
-.navigation ul li a {
-  text-decoration: none;
-  font-size: 10px;
-}
-.header p {
-  font-size: 20px;
-}
 .main img {
   height: 500px;
   width: 50%;
@@ -158,8 +151,8 @@ table {
   text-decoration: none;
   text-align: center;
   align-content: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10px;
+  margin-right: 10px;
   width: 0 auto;
   border: 2px solid black;
   display: block;
@@ -167,12 +160,25 @@ table {
 .main .subpicture {
   font-size: 10px;
 }
-.main .subpicture p a {
+.main p {
   font-size: 14px;
   text-decoration: none;
   text-align: center;
-  margin: 40px;
+  margin: 10px;
   width: 0 auto;
-  border: 2px solid black;
-  display: inline-block;
+  display: flex;
+  align-content: center;
+}
+.main .welcome {
+  margin: 5px;
+  text-align: center;
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+}
+.navigation .pagetitle ul li a {
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  font-size: 10px;
 }
