--- a/Lambda Projects/BuildWeek Safeplace/less/home-page.less
+++ b/Lambda Projects/BuildWeek Safeplace/less/home-page.less
@@ -10,15 +10,6 @@
     color: "#7A93C0";
 }
 
-.navigation ul li a {
-    text-decoration: none;
-    font-size: 10px;
-}
-
-.header p {
-    font-size: 20px;
-
-}
 
 .main img {
     height: 500px;
@@ -40,8 +31,8 @@
     text-decoration: none;
     text-align: center;
     align-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10px;
+    margin-right: 10px;
     width: 0 auto;
     border: 2px solid black;
     display: block;
@@ -51,12 +42,29 @@
     font-size: 10px;
 }
 
-.main .subpicture p a  {
+.main p {
     font-size: 14px;
     text-decoration: none;
     text-align: center;
-    margin: 40px;
+    margin: 10px;
     width: 0 auto;
-    border: 2px solid black;
-    display: inline-block;
+
+    display: flex;
+    align-content: center;
+}
+
+.main .welcome {
+    margin: 5px;
+    text-align: center;
+    display: flex;
+    align-content: center;
+
+    flex-direction: column;
+}
+
+.navigation .pagetitle ul li a {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    font-size: 10px;
 }
