flollow up to intiial - polish

--- a/Lambda Projects/BuildWeek Safeplace/less/about-page.less
+++ b/Lambda Projects/BuildWeek Safeplace/less/about-page.less
@@ -44,7 +44,7 @@
 
     .panel {
       padding: 30px;
-      border: 1px solid gray;
+      //border: 1px solid gray;
 
       .panel-bar {
         display: flex;
@@ -71,5 +71,27 @@
       }
     }
   }
+
+  .name {
+      color: dodgerblue;
+  }
+
+  .panel-bar .red-name {
+      color: red;
+  }
+
+  .panel-btn-open {
+
+    height: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 3;
+    left: 0;
+    top: 0;
+    background-color: #D8D8D8;
+
+    overflow-x: hidden;
+    transition: 0.7s;
+   }
 
 
