--- a/Lambda Projects/BuildWeek Safeplace/less/home-page.less
+++ b/Lambda Projects/BuildWeek Safeplace/less/home-page.less
@@ -48,7 +48,7 @@
     text-align: center;
     margin: 10px;
     width: 0 auto;
-
+    padding: 10px;
     display: flex;
     align-content: center;
 }
@@ -62,9 +62,14 @@
     flex-direction: column;
 }
 
-.navigation .pagetitle ul li a {
+.navigation {
     display: flex;
     flex-direction: row;
     text-decoration: none;
     font-size: 10px;
+    align-content: flex-end;
+}
+
+.navigation a {
+    align-content: flex-end;
 }
